--- a/CODEx/CODEx.csproj
+++ b/CODEx/CODEx.csproj
@@ -29,8 +29,8 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Models\" />
-    <Folder Include="Controllers\" />
     <Folder Include="wwwroot\images\event\" />
+    <Folder Include="wwwroot\images\coordinator\" />
   </ItemGroup>
 
 </Project>
