--- a/CODEx/appsettings.json
+++ b/CODEx/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=CODEx; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=CODEx; Trusted_Connection=True; TrustServerCertificate=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CODEx;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
