--- a/CODEx/appsettings.json
+++ b/CODEx/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:codexclubmmdu.database.windows.net,1433;Initial Catalog=CODEx;Persist Security Info=False;User ID=sqladmin;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=CODEx; Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
